--- a/public/chat.css
+++ b/public/chat.css
@@ -2,7 +2,7 @@ body {
     margin: 0; 
     padding-bottom: 3rem; 
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-    /* margin-bottom: 3.5rem; */
+    margin-bottom: 3.5rem;
 }
 
 #form { 
@@ -49,6 +49,3 @@ body {
     background: #efefef; 
 }
 
-main {
-    margin-top: 3.5rem;
-}
