--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -29,7 +29,9 @@
                   <a class="nav-link" href="/vocations/maint">DB Maintenance</a>
                 </li>
                 <!-- Modal for Login -->
-                <!-- <li class="nav-item">
+                ${
+                  !isAuthenticated ?
+                `<li class="nav-item">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
@@ -61,15 +63,11 @@
                             </div>
                         </div>
                     </div>
-                </li> -->
-                
-                <li class="nav-item">
-                  ${
-                    !isAuthenticated ?
-                    `<a class="nav-link" href="/login">Login</a>` :
-                    `<a class="nav-link" href="/logout">Logout</a>`
+                </li>` :
+                  `<li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                  </li>`
                   }
-                </li>
 
 
                 <li class="nav-item">
